issue of menu pushing content out of bounds resolved

--- a/src/components/Home/components/SunMoonSwitch.scss
+++ b/src/components/Home/components/SunMoonSwitch.scss
@@ -8,12 +8,13 @@
   // flex-direction: column;
   // justify-content: center;
   // justify-items: center;
-  margin-top: 6em;
-  margin-bottom: 6em;
+  margin-top: 5.75em;
+  margin-bottom: 5.75em;
   margin-left: 6em;
   margin-right: 6em;
   width: 200px;
   height: 100%;
+  position: static;
 }
 // }
 
