--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -56,6 +56,7 @@ div.heater-gui {
   display: flex;
   flex-direction: row;
   justify-content: center;
+
   // align-content: space-around;
 }
 
@@ -72,6 +73,8 @@ p.sensor-readout {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  justify-items: flex-end;
+  position: fixed;
   // height: 100%;
 }
 
