--- a/src/components/Navigation.scss
+++ b/src/components/Navigation.scss
@@ -25,7 +25,13 @@
 .header {
   @include bigFont();
   color: goldenrod;
-  
+  position: sticky;
+}
+
+.snek-logo {
+  margin-right: 20px;
+  margin-left: 20px;
+  position: sticky;
 }
 
 .layout {
@@ -33,10 +39,6 @@
   min-height: 100vh;
 }
 
-.snek-logo {
-  margin-right: 20px;
-  margin-left: 20px;
-}
 .snek-button {
   // margin-right: 20px;
   // margin-left: 20px;
