--- a/src/components/SnakeHealth/index.scss
+++ b/src/components/SnakeHealth/index.scss
@@ -1,4 +1,5 @@
 .pageBox {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
