--- a/src/components/TemperatureHistory/index.scss
+++ b/src/components/TemperatureHistory/index.scss
@@ -26,15 +26,27 @@
 
 .TempGraph {
   @include dispComp();
+  position: absolute;
+  width: 960px;
+  height: 540px;
 }
 
-.TempDisp {
+canvas {
+  @include dispComp();
+  position: static;
+  width: 960px;
+  height: 540px;
+}
+
+h1.TempDisp {
   @include dispComp();
   // @include bigFont();
   @include smallFont();
   // @include buttonFont;
-  margin-top: 80px;
+  margin-top: 20px;
   // flex-direction: column;
   justify-content: space-evenly;
+  font-size: 26px;
+  // position: fixed;
 }
 
